[project]
name = "XDrugPy"
authors = [
  {name = "Pedro Sousa Lacerda", email = "pslacerda@gmail.com"},
]
version = "2.0.0"
description = "Protein hotspot detection, visualization and comparative analysis based on FTMap solvent mapping."
dependencies = [
  "numpy==1.26.4",
  "pandas==2.3.3",
  "matplotlib==3.10",
  "scipy==1.15",
  "strenum==0.4",
  "networkx==3.4",
  "watchdog==6.0.0",
  "openpyxl==3.1",
  "rcsb-api==1.7.3",
  "pdb2pqr==3.6.2",
  "propka==3.5.1",
  "molscrub==0.2.2",
  "pymol_new_command @ https://github.com/pslacerda1/pymol_new_command/archive/refs/heads/main.zip",
  "meeko @ https://github.com/pslacerda/Meeko/archive/refs/heads/patch-1.zip"
]